<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ReceiptActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/receipt_desc"
        android:src="@drawable/receipt" />

    <TextView
        android:id="@+id/descLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="18dp"
        android:text="@string/description" />
    
    <TextView
        android:id="@+id/locationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/descLabel"
        android:layout_marginTop="10dp"
        android:text="@string/location" />
    
    <TextView
        android:id="@+id/amountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/locationLabel"
        android:layout_marginTop="10dp"
        android:text="@string/amount" />
    
    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/amountLabel"
        android:layout_marginTop="10dp"
        android:text="@string/date" />
    
    <TextView
        android:id="@+id/remarkLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dateLabel"
        android:layout_marginTop="10dp"
        android:text="@string/remark" />
    
    <TextView
        android:id="@+id/desc_view_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/descLabel"
        android:layout_alignBottom="@+id/descLabel"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/descLabel" />
	
    <TextView
        android:id="@+id/location_view_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/locationLabel"
        android:layout_alignBottom="@+id/locationLabel"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/locationLabel" />
	
    <TextView
        android:id="@+id/amount_view_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/amountLabel"
        android:layout_alignBottom="@+id/amountLabel"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/amountLabel" />

	<TextView
	    android:id="@+id/date_view_text"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/dateLabel"
	    android:layout_alignBottom="@+id/dateLabel"
	    android:layout_marginLeft="15dp"
	    android:layout_toRightOf="@+id/dateLabel" />
	
    <TextView
        android:id="@+id/remark_view_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/remarkLabel"
        android:layout_alignBottom="@+id/remarkLabel"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/remarkLabel" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <Button
            android:id="@+id/edit_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="editReceipt"
            android:text="@string/edit" />

        <Button
            android:id="@+id/delete_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="deleteReceipt"
            android:text="@string/delete" />
    </LinearLayout>
    
</RelativeLayout>
